--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,11 @@ buildscript {
   repositories {
     google()
     jcenter()
+    maven { url "https://plugins.gradle.org/m2/" }
   }
   dependencies {
     classpath 'com.android.tools.build:gradle:3.4.1'
+    classpath "gradle.plugin.coppernic:android-config:0.3.9"
   }
 }
 
